kubernetes-networks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homework-ingress
  namespace: homework
  annotations:
    # Аннотации зависят от контроллера -- это важно!
    nginx.ingress.kubernetes.io/rewrite-target: /index.html
spec:
  ingressClassName: nginx # Указываем какой контроллериспользовать
  rules:
  - host: homework.otus
    http:
      paths:
        - pathType: Prefix
          path: /index.html
          backend:
            service:
              name: demo-app
              port:
                number: 80
        - pathType: Prefix
          path: /homepage
          backend:
            service:
              name: demo-app
              port:
                number: 80
